--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=CourseCompass
 spring.datasource.url=jdbc:mysql://localhost:3306/coursecompass
 ?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=Peluche18#!
+spring.datasource.password=password
