--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=CourseCompass
-
 spring.datasource.url=jdbc:mysql://localhost:3306/coursecompass
 ?useSSL=false
 spring.datasource.username=root
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.datasource.password=password
